--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ a {
     text-decoration: none;
 }
 
-/* effects everthing in the main tag*/
+/* affects everthing in the main tag*/
 .hero {
     height: 800px;
     width: 100%;
@@ -69,7 +69,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-/* effects everthing with "content" class atribute*/
+/* affects everthing with "content" class atribute*/
 .content {
     width: 75%;
     display: inline-block;
@@ -161,7 +161,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/* effects search-engine-optimization img only*/
+/* affects search-engine-optimization img only*/
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -188,7 +188,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* effects everything in <footer> tag*/
+/* affects everything in <footer> tag*/
 .footer {
     padding: 30px;
     clear: both;
